# lumina-waf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  lumina_profile.json  run_all_benchmarks.sh
.github/workflows/: ci.yml
bench/: corpus_bench.cpp  hardware_pmu.h  synthetic_bench.cpp
docs/: data.json  history.json  index.html
final_reports/: LWES-1.0_Audit_Report.md  LWES-1.0_PoC_Report.md  LWES-1.0_Saturation_and_Threat_Report.md  LWES-1.0_v3_Microarch_Report.md  LuminaWAF_Iron_Report_20260621_113607.md  LuminaWAF_Iron_Report_20260621_130422.md  LuminaWAF_Iron_Report_20260621_131138.md  LuminaWAF_Iron_Report_20260621_131906.md  LuminaWAF_Iron_Report_20260621_131928.md  LuminaWAF_Iron_Report_20260621_155833.md  LuminaWAF_Iron_Report_20260621_160830.md
final_reports/raw_data/: wrk2_saturation.txt
infra/soaking_test/: Dockerfile  docker-compose.yml  export_metrics.sh  k6_traffic.js  lumina_nginx.conf  nginx_shadow.conf  prom_exporter.py
methodology/: README.md
nginx_module/: config  ngx_http_luminawaf_module.c
results/: README.md
src/: luminawaf.cpp  luminawaf.h  parser_input.c  parser_scalar.c
test_nginx/conf/: main_modsec.conf  nginx.conf  nginx_asan.conf  nginx_baseline.conf  nginx_lumina.conf  nginx_modsec.conf
test_nginx/modsec/: main.conf
tests/: debug_c  debug_c.c  debug_c2  debug_c2.c  debug_decode.py  debug_misses.py  debug_modsec_miss.py  debug_parity.py  debug_parity2.py  fuzz_harness.cpp  parity_eval.py  parity_test.cpp
tests/eval_suite/: analyze_bench.py  bench_results.txt  benchmark.sh  diff_fuzzer.py  diff_fuzzer_results.md  evaluator.py  ftw_lumina.yaml  ftw_surrogate.py  generate_corpus.py  generate_dataset.py  generate_rules.py  generate_seclist_dataset.py  latency.lua  micro_bench.cpp  modsec_1000_rules.conf  parity_audit.cpp  reproduce.sh  results.json  run_wrk2_bench.sh  run_wrk_bench.sh
tests/eval_suite/corpus/: ground_truth.jsonl
tools/: check_regression.py  iron_benchmark.sh  modsec_transpiler.py
